[gd_scene load_steps=14 format=2]

[ext_resource path="res://resources/Main/BG.png" type="Texture" id=1]
[ext_resource path="res://bar/lvlbar.tscn" type="PackedScene" id=2]
[ext_resource path="res://resources/PTC55F.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Tscn/Main/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/Main/mainlvlbar.gd" type="Script" id=5]
[ext_resource path="res://Tscn/Main/SwipeDetec.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scripts/Main/Main.gd" type="Script" id=7]
[ext_resource path="res://Tscn/Main/Label.gd" type="Script" id=8]
[ext_resource path="res://resources/Main/buttons/button.png" type="Texture" id=9]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 600, 300 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 600, 300 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 3 )

[node name="Main" type="Node2D"]
script = ExtResource( 7 )

[node name="Buttons" type="Node" parent="."]

[node name="Shop" type="Button" parent="Buttons"]
margin_left = 65.0
margin_top = 1107.0
margin_right = 315.0
margin_bottom = 1207.0
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Sklep"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fight" type="Button" parent="Buttons"]
margin_left = 380.816
margin_top = 1105.83
margin_right = 630.816
margin_bottom = 1205.83
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "Walka"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackGraund" type="Sprite" parent="."]
position = Vector2( 360.153, 638.658 )
scale = Vector2( 1.01732, 1 )
texture = ExtResource( 1 )

[node name="Bar" parent="." instance=ExtResource( 2 )]
position = Vector2( -340.446, -58.2025 )
scale = Vector2( 1.4, 1.6 )
script = ExtResource( 5 )

[node name="Lvl" type="Label" parent="Bar"]
margin_left = 339.0
margin_top = 64.0
margin_right = 698.0
margin_bottom = 95.0
custom_colors/font_color = Color( 0.0627451, 0.560784, 0, 1 )
text = "Lorem"
valign = 1
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Players" type="Node" parent="."]

[node name="MainScreen" parent="Players" instance=ExtResource( 4 )]
position = Vector2( -8.72923, -71.8483 )

[node name="SwipeDetector" parent="." instance=ExtResource( 6 )]
[connection signal="pressed" from="Buttons/Shop" to="." method="_on_Shop_pressed"]
[connection signal="pressed" from="Buttons/Fight" to="." method="_on_Fight_pressed"]
[connection signal="swiped" from="SwipeDetector" to="." method="_on_SwipeDetector_swiped"]
